# img_fucker

./: Dockerfile  docker-compose.yml  pyproject.toml
envs/: .env  .env.template
img_fucker/: config.py  dump.rdb  logger.py  main.py  upload.py
img_fucker/api/v1/: api.py
img_fucker/api/v1/endpoints/: analyze_img.py
img_fucker/core/: ocr.py  redis_config.py
img_fucker/core/validation/: ck_credit_card.py  ck_domain.py  ck_email.py  ck_url.py
img_fucker/utils/: cache_hasher.py  data_extraction.py  http_errors.py
tests/: cache_hasher_test.py  ck_credit_card_test.py  ocr_test.py
